# reprodgen

./: .gitignore  README.md  pyproject.toml
data/: ReprodBench-verified.xlsx  reprodbench-base.csv  reprodbench-gi.csv
sandbox_executor/: README.md  pyproject.toml
sandbox_executor/app/: api.py  execution_environment.py  models.py  runner.py
scripts/common/: run_buggy_code_intent_extraction.py  run_buggy_code_reproduction.py  run_buggy_fr_extraction.py  run_buggy_scot_extraction.py  run_patched_code_intent_extraction.py  run_patched_code_reproduction.py  run_patched_code_reproduction_no_answer.py  run_patched_functional_requirements_extraction.py  run_patched_scot_extraction.py
src/reprodbench/ablation/: builder.py  context.py  mode.py
src/reprodbench/executor/: sandbox_client.py
src/reprodbench/io/: csv_loader.py
src/reprodbench/llm/: client.py  memory.py
src/reprodbench/llm/callbacks/: metrics.py
src/reprodbench/llm/context/: limits.py  types.py
src/reprodbench/llm/prompts/: prompt_loader.py
src/reprodbench/pipeline/: buggy_code.py  buggy_code_intent.py  buggy_functional_requirements.py  buggy_scot.py  judge_buggy_code.py  judge_buggy_code_intent.py  judge_buggy_functional_requirements.py  judge_buggy_scot.py  judge_patched_code.py  judge_patched_code_intent.py  judge_patched_functional_requirements.py  judge_patched_scot.py  patched_code.py  patched_code_intent.py  patched_functional_requirements.py  patched_scot.py
src/reprodbench/utils/: dataset_builder.py  logger.py  text.py  utils.py
(+18 files in other folders)
