[project]
name = "reprodbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "adjusttext>=1.3.0",
    "code-bert-score>=0.4.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.4",
    "langchain-anthropic>=1.3.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "levenshtein>=0.27.3",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "isort>=6.1.0",
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
]
